--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,20 @@
   <version>1.0-SNAPSHOT</version>
   <name>mvel</name>
   <url>http://xircles.codehaus.org/projects/mvel</url>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+          <configuration>
+            <source>1.5</source>
+            <target>1.5</target>
+          </configuration>
+       </plugin>
+    </plugins>
+  </build>
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -21,4 +35,7 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+
+
 </project>
