--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
+        <artifactId>maven-optimizer-plugin</artifactId>
           <configuration>
             <source>1.5</source>
             <target>1.5</target>
