--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -10,14 +10,19 @@
 
   <build>
     <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-optimizer-plugin</artifactId>
-          <configuration>
-            <source>1.5</source>
-            <target>1.5</target>
-          </configuration>
-       </plugin>
+      
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-surefire-plugin</artifactId>
+      <configuration>
+        <includes>
+          <include>**/*Test.java</include>
+        </includes>
+        <excludes>
+          <exclude>**/PerfTest.java</exclude>
+        </excludes>
+      </configuration>
+    </plugin>      
     </plugins>
   </build>
 
@@ -41,6 +46,28 @@
       <version>3.0_RC1</version>
       <scope>test</scope>
     </dependency>    
+    
+    <dependency>
+      <groupId>commons-el</groupId>
+      <artifactId>commons-el</artifactId>
+      <version>1.0</version>
+      <scope>test</scope>
+    </dependency> 
+    
+    <dependency>
+      <groupId>javax.servlet.jsp</groupId>
+      <artifactId>jsp-api</artifactId>
+      <version>2.1</version>
+      <scope>test</scope>
+    </dependency>         
+    
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>servlet-api</artifactId>
+      <version>2.5</version>
+      <scope>test</scope>
+    </dependency>             
+       
   </dependencies>
 
 
