--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -10,6 +10,16 @@
 
   <build>
     <plugins>
+
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>2.0.1</version>
+          <configuration>
+            <source>1.5</source>
+            <target>1.5</target>
+          </configuration>
+        </plugin>
       
     <plugin>
       <groupId>org.apache.maven.plugins</groupId>
@@ -56,7 +66,6 @@
       <groupId>asm</groupId>
       <artifactId>asm</artifactId>
       <version>3.0_RC1</version>
-      <scope>test</scope>
     </dependency>    
     
     <dependency>
