--- a/trunk/build.xml
+++ b/trunk/build.xml
@@ -3,7 +3,7 @@
         MVFLEX Expression Language
     </description>
 
-    <property name="version" value="1.2.0b13"/>
+    <property name="version" value="1.2.0RC1"/>
 
     <property name="src" location="src"/>
     <property name="build" location="build"/>
@@ -23,14 +23,14 @@
         <!-- Compile the java code from ${src} into ${build} debuglevel="vars,lines,source" -->
         <javac source="1.5" srcdir="${src}" destdir="${build}" optimize="true" debug="on"
                debuglevel="vars,lines,source">
-            <classpath refid="classpath" />
+            <classpath refid="classpath"/>
         </javac>
     </target>
 
     <target name="compile-nodebug" depends="init"
             description="compile the source ">
         <javac source="1.5" srcdir="${src}" destdir="${build}" optimize="true" debug="off">
-            <classpath refid="classpath" />
+            <classpath refid="classpath"/>
         </javac>
     </target>
 
