--- a/trunk/build.xml
+++ b/trunk/build.xml
@@ -48,7 +48,7 @@
             <classpath refid="classpath"/>
         </junit>
         <junit fork="yes" haltonfailure="yes">
-            <test name="org.mvel.tests.main.CompiledUnitTest"/>
+            <test name="org.mvel.tests.main.CoreConfindenceTests"/>
             <formatter type="plain" usefile="false"/>
             <classpath refid="classpath"/>
         </junit>
