--- a/build.xml
+++ b/build.xml
@@ -3,7 +3,7 @@
         MVFLEX Expression Language
     </description>
 
-    <property name="version" value="1.2.0b21"/>
+    <property name="version" value="1.2.0pre0"/>
 
     <property name="src" location="src"/>
     <property name="build" location="build"/>
