--- a/build.xml
+++ b/build.xml
@@ -1,132 +1,69 @@
-<project name="MVEL" default="release" basedir=".">
-    <description>
-        MVFLEX Expression Language
-    </description>
+<?xml version="1.0" encoding="UTF-8"?>
+<!-- You may freely edit this file. See commented blocks below for -->
+<!-- some examples of how to customize the build. -->
+<!-- (If you delete it and reopen the project it will be recreated.) -->
+<project name="mvel" default="default" basedir=".">
+    <description>Builds, tests, and runs the project mvel.</description>
+    <import file="nbproject/build-impl.xml"/>
+    <!--
 
-    <property name="version" value="1.2.0pre0"/>
+    There exist several targets which are by default empty and which can be 
+    used for execution of your tasks. These targets are usually executed 
+    before and after some main targets. They are: 
 
-    <property name="src" location="src"/>
-    <property name="build" location="build"/>
-    <property name="dist" location="dist"/>
+      -pre-init:                 called before initialization of project properties
+      -post-init:                called after initialization of project properties
+      -pre-compile:              called before javac compilation
+      -post-compile:             called after javac compilation
+      -pre-compile-single:       called before javac compilation of single file
+      -post-compile-single:      called after javac compilation of single file
+      -pre-compile-test:         called before javac compilation of JUnit tests
+      -post-compile-test:        called after javac compilation of JUnit tests
+      -pre-compile-test-single:  called before javac compilation of single JUnit test
+      -post-compile-test-single: called after javac compilation of single JUunit test
+      -pre-jar:                  called before JAR building
+      -post-jar:                 called after JAR building
+      -post-clean:               called after cleaning build products
 
-    <property name="deploy_to" location="..\mvflex\lib\"/>
+    (Targets beginning with '-' are not intended to be called on their own.)
 
-    <target name="init">
-        <!-- Create the time stamp -->
-        <tstamp/>
-        <!-- Create the build directory structure used by optimize -->
-        <mkdir dir="${build}"/>
-    </target>
+    Example of inserting an obfuscator after compilation could look like this:
 
-    <target name="compile" depends="init"
-            description="compile the source ">
-        <!-- Compile the java code from ${src} into ${build} debuglevel="vars,lines,source" -->
-        <javac source="1.5" srcdir="${src}" destdir="${build}" optimize="true" debug="on"
-               debuglevel="vars,lines,source">
-            <classpath refid="classpath"/>
-        </javac>
-    </target>
+        <target name="-post-compile">
+            <obfuscate>
+                <fileset dir="${build.classes.dir}"/>
+            </obfuscate>
+        </target>
 
-    <target name="compile-nodebug" depends="init"
-            description="compile the source ">
-        <javac source="1.5" srcdir="${src}" destdir="${build}" optimize="true" debug="off">
-            <classpath refid="classpath"/>
-        </javac>
-    </target>
-
-    <path id="classpath">
-        <pathelement location="${build}"/>
-        <fileset dir="lib">
-            <include name="**/*.jar"/>
-        </fileset>
-    </path>
-
-    <target name="el-tests">
-        <junit fork="yes" haltonfailure="yes">
-            <test name="org.mvel.tests.main.CoreConfidenceTests"/>
-            <formatter type="plain" usefile="false"/>
-            <classpath refid="classpath"/>
-        </junit>
-    </target>
-
-    <target name="deploy" depends="release">
-        <copy file="mvel-${version}-java${java.version}.jar" tofile="${deploy_to}/mvel.jar"/>
-    </target>
-
-    <target name="jar" depends="clean,compile,el-tests">
-        <delete file="mvel.jar"/>
-
-        <jar jarfile="mvel.jar" basedir="build">
-            <manifest>
-                <attribute name="Built-By" value="Mike Brock"/>
-                <attribute name="Main-Class" value="org.mvel.MVELSH"/>
-
-                <section name="org.mvel">
-                    <attribute name="Sealed" value="false"/>
-                    <attribute name="Specification-Title" value="MVEL"/>
-                    <attribute name="Specification-Version" value="${version}"/>
-                    <attribute name="Implementation-Version" value="${version} ${TODAY}"/>
-                    <attribute name="Implementation-Vendor" value="Mike Brock"/>
-                    <attribute name="Main-Class" value="org.mvel.MVELSH"/>
-                </section>
-            </manifest>
-        </jar>
-    </target>
-
-    <target name="release" depends="jar"
-            description="generate the distribution">
-
-        <delete dir="distrib/${version}"/>
-        <mkdir dir="distrib/${version}/"/>
-
-        <copy todir="distrib/${version}" file="README.TXT"/>
-        <copy todir="distrib/${version}" file="ASM-LICENSE.txt"/>
-        <copy todir="distrib/${version}" file="LICENSE.txt"/>
-        <copy todir="distrib/${version}" file="mvel.jar"/>
+    For list of available properties check the imported 
+    nbproject/build-impl.xml file. 
 
 
-        <mkdir dir="distrib/${version}/lib/"/>
+    Another way to customize the build is by overriding existing main targets.
+    The targets of interest are: 
 
-        <copy todir="distrib/${version}/lib/" file="lib/asm.jar"/>
+      -init-macrodef-javac:     defines macro for javac compilation
+      -init-macrodef-junit:     defines macro for junit execution
+      -init-macrodef-debug:     defines macro for class debugging
+      -init-macrodef-java:      defines macro for class execution
+      -do-jar-with-manifest:    JAR building (if you are using a manifest)
+      -do-jar-without-manifest: JAR building (if you are not using a manifest)
+      run:                      execution of project 
+      -javadoc-build:           Javadoc generation
+      test-report:              JUnit report generation
 
-        <zip zipfile="distrib/mvel-${version}-java${java.version}.zip" basedir="distrib/${version}/"/>
+    An example of overriding the target for project execution could look like this:
 
-        <echo message="ALL DONE!"/>
+        <target name="run" depends="mvel-impl.jar">
+            <exec dir="bin" executable="launcher.exe">
+                <arg file="${dist.jar}"/>
+            </exec>
+        </target>
 
-        <delete dir="build"/>
-    </target>
+    Notice that the overridden target depends on the jar target and not only on 
+    the compile target as the regular run target does. Again, for a list of available 
+    properties which you can use, check the target you are overriding in the
+    nbproject/build-impl.xml file. 
 
-    <target name="release-no-debugging" depends="clean,compile-nodebug,el-tests"
-            description="generate the distribution">
-        <!-- Create the distribution directory -->
-
-        <mkdir dir="build"/>
-        <copy todir="build/">
-            <fileset dir="${build}"/>
-        </copy>
-
-        <delete file="mvel-${version}-java${java.version}-nd.jar"/>
-
-        <jar jarfile="mvel-${version}-java${java.version}-nd.jar" basedir="build">
-            <manifest>
-                <attribute name="Built-By" value="Mike Brock"/>
-                <attribute name="Main-Class" value="org.mvel.MVELSH"/>
-
-                <section name="org.mvel">
-                    <attribute name="Sealed" value="true"/>
-                    <attribute name="Specification-Title" value="MVEL"/>
-                    <attribute name="Specification-Version" value="${version}"/>
-                    <attribute name="Implementation-Version" value="${version} ${TODAY}"/>
-                    <attribute name="Implementation-Vendor" value="Mike Brock"/>
-                </section>
-            </manifest>
-        </jar>
-        <delete dir="build"/>
-    </target>
-
-    <target name="clean"
-            description="clean up">
-        <delete dir="${build}"/>
-        <delete dir="${dist}"/>
-    </target>
+    -->
 </project>
