--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -25,8 +25,15 @@
       <groupId>org.apache.maven.plugins</groupId>
       <artifactId>maven-surefire-plugin</artifactId>
       <configuration>
+          <childDelegation>true</childDelegation>
+          <systemProperties>
+            <property>
+              <name>mvel.disable.jit</name>
+              <value>true</value>
+            </property>
+          </systemProperties>
         <includes>
-          <include>**/*Test.java</include>
+         <include>**/*Test.java</include>
           <include>**/*Tests.java</include>
           <include>**/UsageDemos.java</include>
         </includes>
