--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -2,9 +2,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.codehaus.mvel</groupId>
-    <artifactId>mvel1.2</artifactId>
+    <artifactId>mvel</artifactId>
     <packaging>jar</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.2.15-SNAPSHOT</version>
     <name>mvel</name>
     <url>http://mvel.codehaus.org</url>
 
