--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -1,12 +1,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.codehaus.mvel</groupId>
+    <groupId>org.mvel</groupId>
     <artifactId>mvel</artifactId>
     <packaging>jar</packaging>
-    <version>1.2.15-SNAPSHOT</version>
+    <version>2.0-SNAPSHOT</version>
     <name>mvel</name>
     <url>http://mvel.codehaus.org</url>
+  <scm>
+    <developerConnection>scm:svn:https://svn.codehaus.org/mvel/trunk/</developerConnection>
+  </scm>
 
     <build>
         <plugins>
@@ -99,5 +102,20 @@
 
     </dependencies>
 
+
+	<distributionManagement>
+	  <!-- use the following if you're not using a snapshot version. -->
+	  <repository>
+	    <id>codehaus-main</id>
+	    <name>Codehaus Maven Repository</name>
+	    <url>https://dav.codehaus.org/repository/mvel/</url>
+	  </repository>
+	  <!-- use the following if you ARE using a snapshot version. -->
+	  <snapshotRepository>
+	    <id>codehaus-snapshot</id>
+	    <name>Codehaus Maven Repository</name>
+	    <url>https://dav.codehaus.org/repository/mvel/SNAPSHOTS/</url>
+	  </snapshotRepository>
+	</distributionManagement>
 
 </project>
