--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.mvel</groupId>
     <artifactId>mvel</artifactId>
@@ -6,19 +7,19 @@
     <version>2.0-SNAPSHOT</version>
     <name>mvel</name>
     <url>http://mvel.codehaus.org/</url>
-  <scm>
-    <developerConnection>scm:svn:https://svn.codehaus.org/mvel/tags/mvel-2.0-SNAPSHOT</developerConnection>
-  </scm>
+    <scm>
+        <developerConnection>scm:svn:https://svn.codehaus.org/mvel/tags/mvel-2.0-SNAPSHOT</developerConnection>
+    </scm>
 
     <build>
-		<extensions>
-		  <extension>
-		    <groupId>org.apache.maven.wagon</groupId>
-		    <artifactId>wagon-webdav</artifactId>
-		    <version>1.0-beta-2</version>
-		  </extension>
-		</extensions>
-	
+        <extensions>
+            <extension>
+                <groupId>org.apache.maven.wagon</groupId>
+                <artifactId>wagon-webdav</artifactId>
+                <version>1.0-beta-2</version>
+            </extension>
+        </extensions>
+
         <plugins>
 
             <plugin>
@@ -74,56 +75,22 @@
             <version>3.8.1</version>
             <scope>test</scope>
         </dependency>
-        <!--<dependency>-->
-        <!--<groupId>ognl</groupId>-->
-        <!--<artifactId>ognl</artifactId>-->
-        <!--<version>2.6.9</version>-->
-        <!--<scope>test</scope>-->
-        <!--</dependency>-->
-
-        <!--<dependency>-->
-        <!--<groupId>asm</groupId>-->
-        <!--<artifactId>asm</artifactId>-->
-        <!--<version>3.0_RC1</version>-->
-        <!--</dependency>-->
-
-        <!--<dependency>-->
-        <!--<groupId>commons-el</groupId>-->
-        <!--<artifactId>commons-el</artifactId>-->
-        <!--<version>1.0</version>-->
-        <!--<scope>test</scope>-->
-        <!--</dependency>-->
-
-        <!--<dependency>-->
-        <!--<groupId>javax.servlet.jsp</groupId>-->
-        <!--<artifactId>jsp-api</artifactId>-->
-        <!--<version>2.1</version>-->
-        <!--<scope>test</scope>-->
-        <!--</dependency>-->
-
-        <!--<dependency>-->
-        <!--<groupId>javax.servlet</groupId>-->
-        <!--<artifactId>servlet-api</artifactId>-->
-        <!--<version>2.5</version>-->
-        <!--<scope>test</scope>-->
-        <!--</dependency>-->
-
     </dependencies>
 
 
-	<distributionManagement>
-	  <!-- use the following if you're not using a snapshot version. -->
-	  <repository>
-	    <id>repository.codehaus.org</id>
-	    <name>Codehaus Maven Repository</name>
-	    <url>dav:https://dav.codehaus.org/repository/mvel/</url>
-	  </repository>
-	  <!-- use the following if you ARE using a snapshot version. -->
-	  <snapshotRepository>
-	    <id>snapshots.repository.codehaus.org</id>
-	    <name>Codehaus Snapshot Maven Repository</name>
-	    <url>dav:https://dav.codehaus.org/snapshots.repository/mvel/</url>
-	  </snapshotRepository>
-	</distributionManagement>
+    <distributionManagement>
+        <!-- use the following if you're not using a snapshot version. -->
+        <!--<repository>-->
+            <!--<id>repository.codehaus.org</id>-->
+            <!--<name>Codehaus Maven Repository</name>-->
+            <!--<url>dav:https://dav.codehaus.org/repository/mvel/</url>-->
+        <!--</repository>-->
+        <!-- use the following if you ARE using a snapshot version. -->
+        <snapshotRepository>
+            <id>mvelSnapshots</id>
+            <name>Codehaus Snapshot Maven Repository</name>
+            <url>dav:https://dav.codehaus.org/snapshots.repository/mvel/</url>
+        </snapshotRepository>
+    </distributionManagement>
 
 </project>
