[maven-release-plugin] prepare release 2.0-SNAPSHOT-08282008

--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <name>mvel</name>
     <url>http://mvel.codehaus.org/</url>
     <scm>
-        <developerConnection>scm:svn:https://svn.codehaus.org/mvel/tags/2.0M1</developerConnection>
+        <developerConnection>scm:svn:https://svn.codehaus.org/mvel/tags/2.0-SNAPSHOT-08282008</developerConnection>
     </scm>
 
     <build>
